--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
     "jsdom": "^27.0.0",
+    "msw": "^2.11.3",
     "prettier": "3.6.2",
     "typescript": "^5",
     "vitest": "^3.2.4"
